# cregex

./: .gitignore  CMakeLists.txt  PKGBUILD  README.md  buildcmake  example.c  example.txt  makefile  out.txt  regex.h
example/: example.c  example.sh  example.txt
include/: cregex.h  cregex_impl.h  regex.h  signal_debug.h
install/: generic-python-install.py  macos-generic-build-install.sh  mingw-generic-build-install.ps1  msvc-generic-build-install.ps1  unix-generic-build-install.sh
pyModule/: moduletest.py  setup.py
pyModule/cregex/: __init__.py  cregex.py  test.py
src/: cregex_impl.c  example.c
test/: moduletest.py  unittest.py
test/pyUnitTestBuild/: CMakeCache.txt  Makefile  cmake_install.cmake  unit_test_output.txt
