cmake_minimum_required(VERSION 3.11.0)
project(cregex VERSION 1.0.0)
add_executable(cregex src/example.c)
target_include_directories(cregex PRIVATE ./include)
set_target_properties(cregex PROPERTIES OUTPUT_NAME exampleregex)

IF (Sanitize STREQUAL "address")
    IF (MSVC)
        target_compile_options(cregex PRIVATE /fsanitize=address)
    ELSE()
        target_compile_options(cregex PRIVATE -g -fsanitize=address -fno-omit-frame-pointer -O0)
        target_link_options(cregex PRIVATE -fsanitize=address)
    ENDIF()
ENDIF()